
ChangeLog
 [ + added, - removed, * changed ]
 * 16May2013 Restart sampling once leaving the fork call as child
             Renamed devices and streams in CUDA traces so that their
               numbering goes from 1 to N instead of 0 to N-1.
             Support for time suffixes ns, ms, and us.
             Instrumented MPI_Comm_free.
 * 13May2013 Added instrumentation for #pragma omp for ordered in GNU
             Removed useless warnings when instrumenting OpenMP using preload
 * 10May2013 Improved support for fork+wait+waitpid+system+exec calls
               using dyninst launcher
 * 09May2013 Require binutils if using unwind or compiling in linuxos
               (provides backtrace)
 * 07May2013 Multiple small fixes in the bursty tracing
               Avoided problems when Extrae_shutdown was called
               Emission of MPI others statistics
               MPI communicators minor refactoring
             Removed erroneous emission of hardware counters when a set is
               about to start
             Added installation of extrae_module.f
             OpenMP snippets were misused in DynInst, use the appropriate
             Add cross-compiled librt for ARM architectures if available
 + 02May2013 Added support for CUDA5+CUPTI
             Changed substitute script to use sed -i
 + 30Apr2013 Added support for cudaDeviceReset.
             Honor --with-cuda instead of adding /opt/cuda/4.0 in Makefile
             Look for specific intel mpi libs
 * 29Apr2013 Do not require -e to import symbols
             Added 'random' starting-set-distribution for performance counter
             sets
 + 11Apr2013 Instrumented pthread_barrier_wait
 + 20Mar2013 Added example for Python instrumentation 
 * 20Mar2013 Fixed paths in pyextrae.py
 + 20Mar2013 Added pyextrae.py module in src/others to instrument python programs
 * 15Mar2013 Added Fortran module with Extrae constant and function
                declarations
 * 12Mar2013 Modified SVN propset using