@@ -4,6 +4,10 @@ If you have installed Extrae with DynInst support you can use automatic instrume
 
 When using DynInst-based instrumentation you can easily add instrumentation to the application. In the XML configuration file there is a reference to function-list file that points to routines within the application to be instrumented.
 
-If you don't use DynInst-based instrumentation, you need some code modifications (i.e., adding Extrae_init and Extrae_fini calls) and run the application like in
+If you don't use DynInst-based instrumentation, you need some code modifications (i.e., adding Extrae_init and Extrae_fini calls) and run the application either 
 
-  run_static.sh
+  run_instrumented.sh, for the C version of the application, or 
+  run_instrumentedf.sh, for the Fortran version of the application.
+
+In any case, the script sets the EXECUTABLE environment variable that is latter read by Extrae when parsing the extrae.xml configuration file.
+
