@@ -55,12 +55,14 @@ int main(void)
 	int n = 1000000;
 	double PI25DT = 3.141592653589793238462643;
 	double pi, h, area;
+	extrae_type_t t1 = 1000, t2 = 2000;
+	unsigned nvalues1 = 4, nvalues2 = 0;
 	extrae_value_t values[4] = {0, 1, 2, 2};
 	char * description_values[4] = {"End", "Begin", "Phase1", "Phase2" };
 
 	Extrae_init();
-	Extrae_define_event_type(1000, "Kernel execution", 4, values, description_values);
-	Extrae_define_event_type(2000, "Kernel execution_2", 0, NULL, NULL);
+	Extrae_define_event_type (&t1, "Kernel execution", &nvalues1, values, description_values);
+	Extrae_define_event_type (&t2, "Kernel execution_2", &nvalues2, NULL, NULL);
 
 	h = 1.0 / (double) n;
 
@@ -72,5 +74,5 @@ int main(void)
 	printf("pi is approximately %.16f, Error is %.16f\n",pi,fabs(pi - PI25DT));
 
 	Extrae_fini();
-    return 0;
+	return 0;
 }
